--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,19 @@
 server:
   port: 8088
 
+person:
+  lastName: 张三
+  age: 18
+  boss: false
+  birth: 1990/12/12
+  maps: { k1: v1,k2: 12 }
+  lists:
+    ‐ lisi
+    ‐ zhaoliu
+  dog:
+    name: 迪迪
+    age: 5
+
 spring:
   datasource:
     name: test
